@@ -26,6 +26,8 @@
 #include "quartz_db_table.h"
 #include "om/omerror.h"
 #include "utils.h"
+#include <string.h>
+#include <errno.h>
 
 string
 QuartzRevisionNumber::get_description() const
@@ -34,6 +36,38 @@ QuartzRevisionNumber::get_description() const
 }
 
 
+static void writerevnos(FILE * fp, quartz_revision_number_t * rev1, quartz_revision_number_t * rev2)
+{
+    clearerr(fp);
+    fseek(fp, 0, SEEK_SET);
+
+    size_t bytes;
+    bytes = fwrite((void *) rev1, sizeof(quartz_revision_number_t), 1, fp);
+    if (bytes != 0) 
+	bytes = fwrite((void *) rev2, sizeof(quartz_revision_number_t), 1, fp);
+    fflush(fp);
+    if (bytes == 0) {
+	throw OmDatabaseError("Table not writeable");
+    }
+}
+
+static void readrevnos(bool readonly, FILE * fp, quartz_revision_number_t * rev1, quartz_revision_number_t * rev2)
+{
+    clearerr(fp);
+    fseek(fp, 0, SEEK_SET);
+
+    size_t bytes;
+    bytes = fread((void *) rev1, sizeof(quartz_revision_number_t), 1, fp);
+    if (bytes != 0) 
+	bytes = fread((void *) rev2, sizeof(quartz_revision_number_t), 1, fp);
+    if (bytes == 0) {
+	if (readonly) throw OmOpeningError("Table not present");
+	*rev1 = 0;
+	*rev2 = 0;
+	writerevnos(fp, rev1, rev2);
+    }
+}
+
 QuartzDbTable::QuartzDbTable(string path_,
 			     bool readonly_,
 			     QuartzRevisionNumber revision_)
@@ -41,6 +75,25 @@ QuartzDbTable::QuartzDbTable(string path_,
           readonly(readonly_),
 	  revision(revision_)
 {
+    string filename = path + "fakefoo";
+    if (readonly) {
+	fp = fopen(filename.c_str(), "r");
+    } else {
+	fp = fopen(filename.c_str(), "a+");
+    }
+    if (fp == 0) {
+	throw OmOpeningError("Can't open Quartz table (" + filename + ")" +
+			     strerror(errno));
+    }
+
+    quartz_revision_number_t rev1 = 0;
+    quartz_revision_number_t rev2 = 0;
+    readrevnos(readonly, fp, &rev1, &rev2);
+
+    if (rev1 != revision.value && rev2 != revision.value) {
+	throw OmOpeningError("Can't open table at revision " +
+			     revision.get_description() + ".");
+    }
 }
 
 QuartzDbTable::QuartzDbTable(string path_,
@@ -49,10 +102,30 @@ QuartzDbTable::QuartzDbTable(string path_,
           readonly(readonly_),
 	  revision(0)
 {
+    string filename = path + "fakefoo";
+    if (readonly) {
+	fp = fopen(filename.c_str(), "r");
+    } else {
+	fp = fopen(filename.c_str(), "a+");
+    }
+    if (fp == 0) {
+	throw OmOpeningError("Can't open Quartz table (" + filename + ")" +
+			     strerror(errno));
+    }
+
+    quartz_revision_number_t rev1 = 0;
+    quartz_revision_number_t rev2 = 0;
+    readrevnos(readonly, fp, &rev1, &rev2);
+
+    if (rev1 != revision.value && rev2 != revision.value) {
+	throw OmOpeningError("Can't open table at revision " +
+			     revision.get_description() + ".");
+    }
 }
 
 QuartzDbTable::~QuartzDbTable()
 {
+    fclose(fp);
 }
 
 QuartzRevisionNumber
@@ -65,7 +138,12 @@ QuartzRevisionNumber
 QuartzDbTable::get_latest_revision_number() const
 {
     // FIXME: replace with a call to martin's code
-    return revision;
+    quartz_revision_number_t rev1 = 0;
+    quartz_revision_number_t rev2 = 0;
+    readrevnos(readonly, fp, &rev1, &rev2);
+
+    if (rev1 > rev2) return QuartzRevisionNumber(rev1);
+    return QuartzRevisionNumber(rev2);
 }
 
 quartz_tablesize_t
@@ -147,7 +225,21 @@ QuartzDbTable::set_entries(std::map<QuartzDbKey, QuartzDbTag *> & entries,
 	    }
 	}
 
-	revision = new_revision;
+	quartz_revision_number_t rev1 = 0;
+	quartz_revision_number_t rev2 = 0;
+	readrevnos(readonly, fp, &rev1, &rev2);
+	    cout << revision.value << " " << rev1 << " " << rev2 << endl;
+
+	if (rev1 == revision.value) {
+	    revision = new_revision;
+	    rev2 = revision.value;
+	} else if (rev2 == revision.value) {
+	    revision = new_revision;
+	    rev1 = revision.value;
+	} else {
+	    Assert(0);
+	}
+	writerevnos(fp, &rev1, &rev2);
     }
 
     return true;
