@@ -1,3 +1,8 @@
+Thu Sep 21 18:56:23 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>
+
+	* Added more frobs to quartz: adding stuff to test revision number
+	  semantics, and the usage of revision numbers.
+
 Thu Sep 21 18:33:16 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>
 
 	* Added OmStemmerNode
